fixed the text in the global search to not overlap

--- a/public/stylesheets/sass/style.sass
+++ b/public/stylesheets/sass/style.sass
@@ -449,7 +449,7 @@ textarea
         color: #5092cc
   .tracks
     li
-      height: 24px
+      min-height: 24px
       width: 134px
       padding: 0 7px
       line-height: 24px
